--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WillBerries</title>
+
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto+Slab&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="header">
       <div class="container">
-        <div class="row justify-content-between align-items-center">
-          <div class="col-2">
+        <div class="row justify-content-between align-items-center mt-3 mb-3">
+          <div class="col-lg-2">
             <a href="#" class="header-logo">
               <img
                 src="img/Willberries.svg"
@@ -25,7 +30,7 @@
               />
             </a>
           </div>
-          <div class="col-6">
+          <div class="col-lg-6">
             <nav class="navigation">
               <ul class="navigation-list d-flex justify-content-around">
                 <li class="navigation-item">
@@ -49,7 +54,7 @@
               </ul>
             </nav>
           </div>
-          <div class="col-2 d-flex justify-content-end">
+          <div class="col-lg-2 d-flex justify-content-end">
             <button class="button">
               <img src="img/Cart.svg" alt="icon: bascet" class="button-icon" />
               <span class="button-text">Cart</span>
@@ -58,5 +63,88 @@
         </div>
       </div>
     </header>
+    <div class="slider swiper-container">
+      <div class="swiper-wrapper">
+        <section class="slide slide-1 swiper-slide">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-4 offset-lg-1">
+                <span class="text">Bestseller</span>
+                <h2 class="text-title">Sweater Choker Neck</h2>
+                <p class="text-descr">
+                  Women’s pearl basic knit sweater with a round neck. Available
+                  in several colours. Free shipping to stores.
+                </p>
+                <button class="button">
+                  <span class="button-price">$319</span>
+                  <span class="button-text">Shop now</span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="slide slide-2 swiper-slide">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-4 offset-lg-1">
+                <span class="text">New</span>
+                <h2 class="text-title">Embroidered Hoodie</h2>
+                <p class="text-descr">
+                  Women’s pearl basic knit sweater with a round neck.
+                </p>
+                <button class="button">
+                  <span class="button-price">$219</span>
+                  <span class="button-text">Shop now</span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="slide slide-3 swiper-slide">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-4 offset-lg-1">
+                <span class="text">Bestseller</span>
+                <h2 class="text-title">Sweater Choker Neck</h2>
+                <p class="text-descr">
+                  Women’s pearl basic knit sweater with a round neck. Available
+                  in several colours. Free shipping to stores.
+                </p>
+                <button class="button">
+                  <span class="button-price">$319</span>
+                  <span class="button-text">Shop now</span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+      <!-- swiper-wrapper -->
+      <div class="slider-nav">
+        <div class="container">
+          <div class="row justify-content-between">
+            <div class="col-1">
+              <button class="button-arrow slider-button-prev">
+                <img src="img/arrow-prev.png" alt="icon: arrow-prev" />
+              </button>
+            </div>
+            <!-- /.col-1 -->
+            <div class="col-1">
+              <button class="button-arrow slider-button-next">
+                <img src="img/arrow-next.png" alt="icon:arrow-next" />
+              </button>
+            </div>
+            <!-- /.col-1 -->
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- slider-nav -->
+    </div>
+    <!-- slider -->
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
