--- a/index.html
+++ b/index.html
@@ -144,6 +144,180 @@
     </div>
     <!-- slider -->
 
+    <div class="container">
+      <div class="row mt-5 mb-5">
+        <div class="col-lg-6 mb-3">
+          <div class="card card-1">
+            <h3 class="card-title">Fashion Month Ready in Capital Shop</h3>
+            <p class="card-descr">
+              Bags & Acsessories & Lingerie & Sportswear & Beauty & Swimwear
+            </p>
+            <button class="button">
+              <span class="button-text">View all</span>
+              <span class="button-icon-arrow"
+                ><img src="img/Arrow.png" alt="icon: arrow"
+              /></span>
+            </button>
+          </div>
+          <!-- card-1 -->
+        </div>
+        <!-- /.col-lg-6 -->
+        <div class="col-lg-6 mb-3">
+          <div class="card card-2">
+            <h3 class="card-title light">
+              Catch the Sun: Spring Break Styles From $5.99
+            </h3>
+            <p class="card-descr light">
+              Sweaters & Hoodies & Puffer Jackets & Coats and Jackets & Knit
+            </p>
+            <button class="button">
+              <span class="button-text">View all</span>
+              <span class="button-icon-arrow"
+                ><img src="img/Arrow.png" alt="icon: arrow"
+              /></span>
+            </button>
+          </div>
+          <!-- card-1 -->
+        </div>
+        <!-- /.col-lg-6 -->
+        <div class="col-lg-9">
+          <div class="card card-3">
+            <span class="text">Bestseller</span>
+            <h3 class="card-title big">Poplin Top With Sleeve Bow</h3>
+            <p class="card-descr big">
+              Poplin top with roll neckline, long sleeves
+            </p>
+            <button class="button">
+              <span class="button-price">$129</span>
+              <span class="button-text">Shop now</span>
+            </button>
+          </div>
+          <!-- card-1 -->
+        </div>
+        <!-- /.col-lg-9 -->
+        <div class="col-lg-3">
+          <div class="card card-4">
+            <h3 class="card-title light light-big">Printed Shirt <br> with a Bow</h3>
+            <p class="card-descr pink">Pink/Sky Blue/Yellow</p>
+            
+              <span class="button-price light">$129</span>
+              
+            </button>
+          </div>
+          <!-- card-1 -->
+        </div>
+        <!-- /.col-lg-2 -->
+      </div>
+      <!-- /.row -->
+      <div class="row d-flex align-items-center mb-4">
+        <div class="col-lg-9">
+          <h2 class="offer-title">New Arrival</h2>
+        </div>
+        <!-- /.col-lg-9 -->
+        <div class="col-lg-3 d-flex  justify-content-end align-items-center"><a href="#" class="offer-link">View All</a></div>
+        <!-- /.col-lg-3 -->
+      </div>
+      <!-- /.row -->
+      <div class="row mb-5">
+        <div class="col-lg-3">
+          <div class="offer-card">
+            <div class="offer-label text">New</div>
+            <!-- /.offer-label text -->
+            <img src="img/image-119.png" alt="image:Embroidered Hoodie">
+            <div class="offer-card-title">Embroidered Hoodie</div>
+            <!-- /.offer-card-title -->
+            <div class="offer-card-descr">Yellow/Lilac/Fuchsia/Orange</div>
+            <!-- /.offer-card-descr -->
+            <div class="price">$89</div>
+            <!-- /.price -->
+          </div>
+          <!-- /.offer-card -->
+        </div>
+        <!-- /.col-lg-3 -->
+        <div class="col-lg-3">
+          <div class="offer-card">
+            <div class="offer-label text">New</div>
+            <!-- /.offer-label text -->
+            <img src="img/Image-2.png" alt="image:Faded Beach Trousers">
+            <div class="offer-card-title">Faded Beach Trousers</div>
+            <!-- /.offer-card-title -->
+            <div class="offer-card-descr">Navy/Ochre/Black/Khaki</div>
+            <!-- /.offer-card-descr -->
+            <div class="price">$139</div>
+            <!-- /.price -->
+          </div>
+          <!-- /.offer-card -->
+        </div>
+        <!-- /.col-lg-3 -->
+        <div class="col-lg-3">
+          <div class="offer-card">
+            <div class="offer-label text">New</div>
+            <!-- /.offer-label text -->
+            <img src="img/Image-1.png" alt="image:Text T-Shirt">
+            <div class="offer-card-title">Text T-Shirt</div>
+            <!-- /.offer-card-title -->
+            <div class="offer-card-descr">White</div>
+            <!-- /.offer-card-descr -->
+            <div class="price">$59</div>
+            <!-- /.price -->
+          </div>
+          <!-- /.offer-card -->
+        </div>
+        <!-- /.col-lg-3 -->
+        <div class="col-lg-3">
+          <div class="offer-card">
+            <div class="offer-label text">New</div>
+            <!-- /.offer-label text -->
+            <img src="img/Image.png" alt="image:Striped Long Sleeve Shirt">
+            <div class="offer-card-title">Striped Long Sleeve Shirt</div>
+            <!-- /.offer-card-title -->
+            <div class="offer-card-descr">Red/Sky Blue</div>
+            <!-- /.offer-card-descr -->
+            <div class="price">$119</div>
+            <!-- /.price -->
+          </div>
+          <!-- /.offer-card -->
+        </div>
+        <!-- /.col-lg-3 -->
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7">
+            <nav>
+              <ul class="footer-menu">
+                <li class="footer-item"><a href="#" class="footer-link">Shop</a></li>
+                <li class="footer-item"><a href="#" class="footer-link">About Us</a></li>
+                <li class="footer-item"><a href="#" class="footer-link">Careers</a></li>
+                <li class="footer-item"><a href="#" class="footer-link">FAQ</a></li>
+                <li class="footer-item"><a href="#" class="footer-link">Blog</a></li>
+                <li class="footer-item"><a href="#" class="footer-link">Contacts</a></li>
+              </ul>
+            </nav>
+          </div>
+          <!-- /.col-lg-7 -->
+          <div class="col-lg-3">
+            <div class="social">
+              <span class="social-text">Follow Us</span>
+              <img src="img/Facebook.svg" alt="icon: Facebook" class="social-img">
+              <img src="img/Twitter.svg" alt="icon: Twitter" class="social-img">
+              <img src="img/Instagram.svg" alt="icon: Instagram" class="social-img">
+            </div>
+          </div>
+          <!-- /.col-lg-3 -->
+          <div class="col-lg-2">
+            <span class="footer-req">© 2019 Universal UI Kit</span>
+          </div>
+          <!-- /.col-lg-2 -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </footer>
+
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
