--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
     <!-- /.container -->
     <footer class="footer">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-7">
+        <div class="row   pt-5 pb-4">
+          <div class="col-lg-7 ">
             <nav>
-              <ul class="footer-menu">
+              <ul class="footer-menu d-flex">
                 <li class="footer-item"><a href="#" class="footer-link">Shop</a></li>
                 <li class="footer-item"><a href="#" class="footer-link">About Us</a></li>
                 <li class="footer-item"><a href="#" class="footer-link">Careers</a></li>
@@ -299,17 +299,35 @@
             </nav>
           </div>
           <!-- /.col-lg-7 -->
-          <div class="col-lg-3">
-            <div class="social">
+          <div class="col-lg-3 ">
+            <div class="social d-flex align-items-center">
               <span class="social-text">Follow Us</span>
-              <img src="img/Facebook.svg" alt="icon: Facebook" class="social-img">
-              <img src="img/Twitter.svg" alt="icon: Twitter" class="social-img">
-              <img src="img/Instagram.svg" alt="icon: Instagram" class="social-img">
+              <a href="https://facebook.com" class="link" target="_blank"><img src="img/Facebook.svg" alt="icon: Facebook" class="social-img"></a>
+              <a href="https://twitter.com" class="link" target="_blank"><img src="img/Twitter.svg" alt="icon: Twitter"  class="social-img"></a>
+              <a href="https://instagram.com"  class="link" target="_blank"><img src="img/Instagram.svg" alt="icon: Instagram" class="social-img"></a>
             </div>
           </div>
           <!-- /.col-lg-3 -->
-          <div class="col-lg-2">
+          <div class="col-lg-2 d-flex justify-content-end">
             <span class="footer-req">© 2019 Universal UI Kit</span>
+          </div>
+          <!-- /.col-lg-2 -->
+        </div>
+        <!-- /.row -->
+        <hr class="hr">
+        <div class="row d-flex justify-content-between pt-4 pb-5">
+          <div class="col-lg-4">
+            <div class="pay-cards">
+              <a href="#" class="link"><img class="pay" src="img/Logo-3.png" alt="logo: Visa"></a>
+              <a href="#" class="link"><img class="pay" src="img/Logo-2.png" alt="logo: Mastercard"></a>
+              <a href="#" class="link"><img class="pay" src="img/Logo-1.png" alt="logo: PayPal"></a>
+              <a href="#" class="link"><img class="pay" src="img/Logo.png" alt="logo: Bitcoin"></a>
+            </div>
+          </div>
+          <!-- /.col-lg-4 -->
+          <div class="col-lg-2 ">
+            <a href="#" class="up-link d-flex align-items-center justify-content-end"><span class="up-text">Top</span>
+            <img src="img/Round with small icon.png" alt="icon: to up" class="up-img"></a>
           </div>
           <!-- /.col-lg-2 -->
         </div>
