--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
     <header class="header">
       <div class="container">
-        <div class="row justify-content-between align-items-center mt-3 mb-3">
-          <div class="col-lg-2">
+        <div class="row justify-content-between align-items-center mt-3 mb-3 mx-2 mx-sm-0">
+          <div class="col-lg-2 col-6">
             <a href="#" class="header-logo">
               <img
                 src="img/Willberries.svg"
@@ -30,7 +30,7 @@
               />
             </a>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 d-none d-lg-block">
             <nav class="navigation">
               <ul class="navigation-list d-flex justify-content-around">
                 <li class="navigation-item">
@@ -54,7 +54,7 @@
               </ul>
             </nav>
           </div>
-          <div class="col-lg-2 d-flex justify-content-end">
+          <div class="col-lg-2 col-6 d-flex justify-content-end">
             <button class="button">
               <img src="img/Cart.svg" alt="icon: bascet" class="button-icon" />
               <span class="button-text">Cart</span>
@@ -68,7 +68,7 @@
         <section class="slide slide-1 swiper-slide">
           <div class="container">
             <div class="row">
-              <div class="col-lg-4 offset-lg-1">
+              <div class="col-lg-4 mx-3 mx-sm-0 offset-lg-1">
                 <span class="text">Bestseller</span>
                 <h2 class="text-title">Sweater Choker Neck</h2>
                 <p class="text-descr">
@@ -122,7 +122,7 @@
       <!-- swiper-wrapper -->
       <div class="slider-nav">
         <div class="container">
-          <div class="row justify-content-between">
+          <div class="row d-none  d-lg-block justify-content-between">
             <div class="col-1">
               <button class="button-arrow slider-button-prev">
                 <img src="img/arrow-prev.png" alt="icon: arrow-prev" />
@@ -180,7 +180,7 @@
           <!-- card-1 -->
         </div>
         <!-- /.col-lg-6 -->
-        <div class="col-lg-9">
+        <div class="col-lg-9 mb-3">
           <div class="card card-3">
             <span class="text">Bestseller</span>
             <h3 class="card-title big">Poplin Top With Sleeve Bow</h3>
@@ -210,16 +210,16 @@
       </div>
       <!-- /.row -->
       <div class="row d-flex align-items-center mb-4">
-        <div class="col-lg-9">
+        <div class="col-lg-9 col-6">
           <h2 class="offer-title">New Arrival</h2>
         </div>
         <!-- /.col-lg-9 -->
-        <div class="col-lg-3 d-flex  justify-content-end align-items-center"><a href="#" class="offer-link">View All</a></div>
+        <div class="col-lg-3 col-6 d-flex  justify-content-end align-items-center"><a href="#" class="offer-link">View All</a></div>
         <!-- /.col-lg-3 -->
       </div>
       <!-- /.row -->
       <div class="row mb-5">
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-6">
           <div class="offer-card">
             <div class="offer-label text">New</div>
             <!-- /.offer-label text -->
@@ -234,7 +234,7 @@
           <!-- /.offer-card -->
         </div>
         <!-- /.col-lg-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-6">
           <div class="offer-card">
             <div class="offer-label text">New</div>
             <!-- /.offer-label text -->
@@ -249,7 +249,7 @@
           <!-- /.offer-card -->
         </div>
         <!-- /.col-lg-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-6">
           <div class="offer-card">
             <div class="offer-label text">New</div>
             <!-- /.offer-label text -->
@@ -264,7 +264,7 @@
           <!-- /.offer-card -->
         </div>
         <!-- /.col-lg-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-6">
           <div class="offer-card">
             <div class="offer-label text">New</div>
             <!-- /.offer-label text -->
@@ -288,7 +288,7 @@
         <div class="row   pt-5 pb-4">
           <div class="col-lg-7 ">
             <nav>
-              <ul class="footer-menu d-flex">
+              <ul class="footer-menu d-sm-flex ">
                 <li class="footer-item"><a href="#" class="footer-link">Shop</a></li>
                 <li class="footer-item"><a href="#" class="footer-link">About Us</a></li>
                 <li class="footer-item"><a href="#" class="footer-link">Careers</a></li>
@@ -299,8 +299,8 @@
             </nav>
           </div>
           <!-- /.col-lg-7 -->
-          <div class="col-lg-3 ">
-            <div class="social d-flex align-items-center">
+          <div class="col-xl-3 col-sm-6 mt-3 mt-xl-0">
+            <div class="social d-flex  mb-2 mb-sm-0 align-items-center">
               <span class="social-text">Follow Us</span>
               <a href="https://facebook.com" class="link" target="_blank"><img src="img/Facebook.svg" alt="icon: Facebook" class="social-img"></a>
               <a href="https://twitter.com" class="link" target="_blank"><img src="img/Twitter.svg" alt="icon: Twitter"  class="social-img"></a>
@@ -308,7 +308,7 @@
             </div>
           </div>
           <!-- /.col-lg-3 -->
-          <div class="col-lg-2 d-flex justify-content-end">
+          <div class="col-xl-2 col-sm-6 d-flex justify-content-sm-end align-items-end">
             <span class="footer-req">© 2019 Universal UI Kit</span>
           </div>
           <!-- /.col-lg-2 -->
@@ -316,7 +316,7 @@
         <!-- /.row -->
         <hr class="hr">
         <div class="row d-flex justify-content-between pt-4 pb-5">
-          <div class="col-lg-4">
+          <div class="col-xl-4 col-9">
             <div class="pay-cards">
               <a href="#" class="link"><img class="pay" src="img/Logo-3.png" alt="logo: Visa"></a>
               <a href="#" class="link"><img class="pay" src="img/Logo-2.png" alt="logo: Mastercard"></a>
@@ -325,7 +325,7 @@
             </div>
           </div>
           <!-- /.col-lg-4 -->
-          <div class="col-lg-2 ">
+          <div class="col-2 ">
             <a href="#" class="up-link d-flex align-items-center justify-content-end"><span class="up-text">Top</span>
             <img src="img/Round with small icon.png" alt="icon: to up" class="up-img"></a>
           </div>
